--- a/.circleci/artifacts.yml
+++ b/.circleci/artifacts.yml
@@ -2,6 +2,8 @@ job_environments:
   common_environment: &common_environment
     APP_HOSTPATH: test-nix
     CONTAINER_PREFIX: planet4-test-nix
+    WP_DB_NAME_PREFIX: planet4-testnix_wordpress
+    CHART_VERSION: 0.8.9
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: k8s.p4.greenpeace.org
