--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ job_environments:
     CONTAINER_PREFIX: planet4-test-nix
     WP_DB_NAME_PREFIX: planet4-testnix_wordpress
     CHART_VERSION: 0.8.9
+    WP_VERSION: 5.5.1
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: k8s.p4.greenpeace.org
