--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,11 @@
 ---
 version: 2.1
 
+parameters:
+  rollback:
+    type: boolean
+    default: false
+
 defaults: &defaults
   docker:
     - image: greenpeaceinternational/p4-builder:latest
@@ -12,7 +17,6 @@ job_environments:
     APP_HOSTPATH: test-nix
     CONTAINER_PREFIX: planet4-test-nix
     WP_DB_NAME_PREFIX: planet4-testnix_wordpress
-    WP_VERSION: 5.5.1
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: k8s.p4.greenpeace.org
