--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ job_environments:
     APP_HOSTPATH: test-nix
     CONTAINER_PREFIX: planet4-test-nix
     WP_DB_NAME_PREFIX: planet4-testnix_wordpress
+    WP_VERSION: 5.5.3
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: www-dev.greenpeace.org
