--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,6 @@ job_environments:
     APP_HOSTPATH: test-nix
     CONTAINER_PREFIX: planet4-test-nix
     WP_DB_NAME_PREFIX: planet4-testnix_wordpress
-    WP_VERSION: 5.5.3
   develop_environment: &develop_environment
     APP_ENVIRONMENT: development
     APP_HOSTNAME: www-dev.greenpeace.org
@@ -40,7 +39,8 @@ job_definitions:
   visualtests_reference_steps: &visualtests_reference_steps
     docker:
       - image: greenpeaceinternational/planet4-backstop:latest
-        auth: &docker_auth
+        auth:
+          <<: *docker_auth
     working_directory: /src
     steps:
       - run: ./checkout.sh
@@ -57,7 +57,8 @@ job_definitions:
   visualtests_compare_steps: &visualtests_compare_steps
     docker:
       - image: greenpeaceinternational/planet4-backstop:latest
-        auth: &docker_auth
+        auth:
+          <<: *docker_auth
     working_directory: /src
     parameters:
       notify:
@@ -126,7 +127,8 @@ job_definitions:
       - image: gcr.io/planet-4-151612/p4-codeception:build-12
       - name: selenium
         image: selenium/standalone-chrome-debug:3.141.59-oxygen
-        auth: &docker_auth
+        auth:
+          <<: *docker_auth
     steps:
       - checkout
       - run: if [ ! -d "tests" ] || [ ! "$(ls -A tests)" ]; then circleci-agent step halt; fi
